# idl-program

./: .gitignore  Anchor.toml  Cargo.toml  README.MD  package-lock.json  package.json
codama/: generateCodama.ts  package-lock.json  package.json
js_sdk/: ProgramMetaData.ts  README.md  UploadIdl.ts  package-lock.json  package.json  tsconfig.json
js_sdk/src/: ProgramMetaData.ts  cli.ts  index.ts  metadata_program.json  upload_idl_anchor.json
js_sdk/src/types/: metadata_program.ts  upload_idl_anchor.d.ts  upload_idl_anchor.ts
programs/metadata-program/: Cargo.toml
programs/metadata-program/src/: lib.rs
programs/upload-idl-anchor/: Cargo.toml
programs/upload-idl-anchor/src/: lib.rs
rust_cli/: Cargo.toml  README.md
rust_cli/src/: cli.rs  config.rs  main.rs
rust_cli/src/codama_sdk/: programs.rs
rust_cli/src/codama_sdk/accounts/: idl_account.rs  mod.rs
rust_cli/src/codama_sdk/errors/: metadata_program.rs  mod.rs
rust_cli/src/codama_sdk/instructions/: close_buffer.rs  create_buffer.rs  initialize.rs  mod.rs  set_authority.rs  set_buffer.rs  write_buffer.rs
rust_cli/src/commands/: idl.rs  mod.rs
tests/: UploadIdl.ts  metadata.json  testidl.json  testidl_smal.json  upload-idl-anchor.ts  upload-metadata-and-idl.ts  wallet.json  wallet2.json
