[package]
name = "program-metadata"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for Solana metadata operations"
authors = ["Wealthineer <hi@wealthineer.com>"]
license = "MIT"
repository = "https://github.com/solana-developers/idl-program/tree/main/rust_sdk"
keywords = ["solana", "cli", "metadata", "blockchain"]
categories = ["command-line-utilities"]


[[bin]]
name = "program-metadata"
path = "src/main.rs"

[dependencies]
clap = "2.33"
solana-sdk = "1.17"
solana-client = "1.17"
solana-program = "1.17"
anyhow = "1.0"
solana-cli-config = "=1.18.23"
solana-clap-utils = "=1.18.23"
borsh = "0.10"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0.3"
num-derive = "0.4.2"
num-traits = "0.2.15"
flate2 = "1.0.26"
reqwest = { version = "0.11", features = ["blocking"] }
