[package]
name = "metadata-program"
version = "0.1.0"
description = "A program to attach metadata to programs. Like for example the IDL or metadata."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "metadata_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
